--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vuexy-react-admin-dashboard",
+  "name": "wow-admin",
+  "homepage": "https://prashant-vekariya.github.io/Wow-Admin",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -30,6 +31,7 @@
     "draftjs-to-html": "0.9.1",
     "file-saver": "2.0.2",
     "flatpickr": "4.6.3",
+    "gh-pages": "^3.2.3",
     "history": "5.0.0",
     "html-to-draftjs": "1.5.0",
     "intl-messageformat": "7.8.4",
@@ -89,6 +91,8 @@
     "yup": "0.32.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -115,6 +119,5 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ],
-  "homepage": ""
+  ]
 }
