--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jquery": "3.5.1",
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.6.0",
-    "moment": "2.29.1",
+    "moment": "^2.29.1",
     "nouislider": "14.6.2",
     "nouislider-react": "3.3.8",
     "postcss-rtl": "1.5.0",
@@ -57,6 +57,7 @@
     "react-flatpickr": "3.9.1",
     "react-hook-form": "6.15.1",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "3.11.0",
     "react-leaflet": "3.1.0",
     "react-paginate": "7.0.0",
