--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.6.0",
     "moment": "^2.29.1",
+    "node-gyp": "^9.0.0",
     "nouislider": "14.6.2",
     "nouislider-react": "3.3.8",
     "postcss-rtl": "1.5.0",
