--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "redux": "4.0.5",
     "redux-debounced": "0.5.0",
     "redux-thunk": "2.3.0",
-    "sass": "^1.26.8",
+    "sass": "1.26.8",
     "screenfull": "5.0.2",
     "sortablejs": "1.12.0",
     "styled-components": "5.1.1",
@@ -88,10 +88,12 @@
     "webpack": "4.43.0",
     "wnumb": "1.2.0",
     "xlsx": "0.16.2",
+    "yarn": "1.21.1",
     "yup": "0.32.8"
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "predeploy": "npm run build",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
@@ -106,6 +108,7 @@
     "eslint": "^7.8.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.6",
+    "node-sass": "^4.13.1",
     "react-app-rewire-aliases": "^0.2.0",
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewire-sass-rule": "^2.1.1",
