--- a/package.json
+++ b/package.json
@@ -96,10 +96,10 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "predeploy": "npm run build",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
+    "heroku-postbuild": "yarn build",
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "lint:fix": "eslint src/**/*.js --fix"
   },
