--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "yarn build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "heroku-postbuild": "yarn build",
