--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "yarn build",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "lint": "eslint src/**/*.js src/**/*.jsx",
