--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "wow-admin",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "14.17.0",
+    "yarn": "1.22.17"
+  },
   "dependencies": {
     "@casl/ability": "5.2.2",
     "@casl/react": "2.1.1",
