--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "redux-thunk": "2.3.0",
     "sass": "1.26.8",
     "screenfull": "5.0.2",
+    "serve": "^13.0.2",
     "sortablejs": "1.12.0",
     "styled-components": "5.1.1",
     "sweetalert2": "10.14.0",
@@ -96,7 +97,7 @@
     "yup": "0.32.8"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "serve -s start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
